[package]
name = "rocket_ext"
version = "0.2.0"
edition = "2024"
authors = ["Devin Bidwell <dbidwell@biddydev.com>"]
keywords = ["rocket", "cors", "preflight", "headers"]
license = "MIT OR Apache-2.0"
description = "A Rocket extension for working with pre-flight requests and CORS headers."
repository = "https://github.com/dbidwell94/rocket_ext"

[dependencies]
rocket = { version = "^0.5" }
thiserror = { version = "^2.0" }
http = { version = "^1.3" }
lasso = { version = "^0.7" }
itertools = { version = "^0.14" }


[dev-dependencies]
tokio = { version = "^1.45", features = ["test-util"] }
anyhow = { version = "^1.0" }
